# AI-Gateway

./: .editorconfig  .gitignore  .markdownlint.jsonc  .markdownlint.yaml  AGENT-CICD-APPROACH.md  AGENTS.md  AI-GATEWAY.md  AI-Gateway.sln  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  MODEL-DEPLOYMENT-APPROACH.md  README.md  SLIDES.md  pyproject.toml  pyrightconfig.json  requirements.txt
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/codeql/: codeql-config.yml
.github/workflows/: bot-reply-to-new-issue.yaml  codeql.yml  nbchecks.py  nbchecks.yaml  update-labs-config.yml
.infracost/terraform_modules/: manifest-c0a9a3254482d8803c483ee0351c0df4.json
ai_gateway/: README.md  config.py  main.py
ai_gateway/core/: limiter.py
ai_gateway/providers/: base.py  openai.py
ai_gateway/routes/: chat.py
docs/: 404.html  README.md  app.js  index.html  labs-config.json  markdown-page.html  site.md  sitemap.xml  styles.css
docs/docs/: 0-introduction.md  index.md  introduction.html  prerequisites.html  welcome.html
docs/workshop/: 1-prerequisites.md  category.json  index.html  workshop-app.js  workshop-styles.css
labs/GPT-4o-inferencing/: GPT-4o-inferencing.ipynb  GPT-4o.ipynb  README.MD  main.bicep
labs/_deprecated/function-calling/: README.MD  function-calling.ipynb  function_app.py  openai-usage-analysis-workbook.json  policy.xml  pyproject.toml  requirements.txt  weather.json
labs/access-controlling/: README.MD  access-controlling.ipynb  clean-up-resources.ipynb  main.bicep  policy-updated.xml  policy.xml
labs/advanced-load-balancing/: README.MD  advanced-load-balancing.ipynb  clean-up-resources.ipynb  main.bicep  policy.xml
labs/ai-agent-service/: AI-AGENT-SERVICE-BREAKDOWN.md  README.MD  UPDATING-AGENTS.md  ai-agent-service-foundry-classic.ipynb  ai-agent-service-foundry-v2.ipynb  ai-agent-service-hub-based.ipynb  ai-agent-service-v1.ipynb  ai-agent-service-v2.ipynb  ai-agent-service.ipynb  city-weather-openapi.json  clean-up-resources.ipynb  inference-policy.xml  main-v1.bicep  main-v2.bicep  main.bicep  openai-policy.xml  place-order-openapi.json  place-order-policy.xml  policy.xml  product-catalog-openapi.json
labs/ai-foundry-deepseek/: README.MD  ai-foundry-deepseek.ipynb  clean-up-resources.ipynb  main.bicep  policy.xml
labs/ai-foundry-hosted-agents-custom-framework/: .gitignore  (+5 more)
labs/ai-foundry-sdk/: AI-FOUNDRY-SDK-BREAKDOWN.md  README.MD  ai-foundry-sdk.ipynb  clean-up-resources.ipynb  main.bicep  pyproject.toml  requirements.txt
labs/ai-foundry-toolbox/: README.md  ai-foundry-toolbox.ipynb  clean-up-resources.ipynb  main.bicep  main.json  pyproject.toml  toolbox-policy.xml
labs/ai-foundry-toolbox/mcp-servers/pet-insurance/: .funcignore  function_app.py  host.json
labs/ai-foundry-toolbox/mcp-servers/vet-clinic/: .gitignore  requirements.txt
labs/ai-foundry-toolbox/mcp-servers/vet-toolbox/: .funcignore  .gitignore  function_app.py
labs/mcp-a2a-agents/: README.MD  clean-up-resources.ipynb  deploy-a2a-infra-assests.ipynb  main.bicep  mcp-a2a-agent-standalone.ipynb  mcp-a2a-agents.ipynb  mcp-agent-as-a2a-server.ipynb  mcp-agent-as-mcp-server.ipynb  pyproject.toml  requirements.txt
labs/mcp-a2a-agents/diagrams/: diagrams.md  mcp_github_no_login.mmd
labs/mcp-a2a-agents/src/a2a-servers/a2a-sk-mcp-agent/: a2a_sk_server.py  requirements.txt
labs/mcp-a2a-agents/src/a2a-servers/apim-api/: a2a_openapi.json
labs/mcp-a2a-agents/src/a2a_client/: README.md  __main__.py  pyproject.toml
labs/mcp-a2a-agents/src/a2a_servers/a2a_ag_mcp_agent/: Dockerfile  a2a_agents.py  a2a_server.py  pyproject.toml  requirements.txt
labs/mcp-a2a-agents/src/a2a_servers/a2a_sk_mcp_agent/: Dockerfile  a2a_agent_exec.py  a2a_agents.py  a2a_server.py  a2a_sk_server.py  pyproject.toml  requirements.txt
labs/mcp-a2a-agents/src/a2a_servers/apim-api/: a2a_openapi.json  api.bicep  policy.xml
labs/mcp-a2a-agents/src/a2a_servers/apim-api/v1/: api.bicep  policy.xml
labs/mcp-a2a-agents/src/a2a_servers/apim-api/v2/: api.bicep
labs/mcp-a2a-agents/src/github/apim-api/: openapi.json  operation-policy.xml
labs/mcp-a2a-agents/src/github/mcp-server/: Dockerfile
labs/mcp-a2a-agents/src/mcp_sk_servers/apim-mcp/: mcp-api.bicep  mcp-api.policy.xml
labs/mcp-a2a-agents/src/mcp_sk_servers/src/: Dockerfile  pyproject.toml  requirements.txt  sk_mcp_server.py
labs/mcp-a2a-agents/src/oncall/apim-api/: api.bicep
labs/mcp-a2a-agents/src/oncall/mcp-server/: pyproject.toml
labs/mcp-a2a-agents/src/servicenow/apim-api/: operation-policy.xml
labs/mcp-a2a-agents/src/servicenow/mcp-server/: mcp-server.py
labs/mcp-a2a-agents/src/spotify/apim-api/: api.bicep  policy.xml
labs/mcp-a2a-agents/src/weather/apim-api/: api.bicep
labs/mcp-a2a-agents/src/weather/mcp-server/: Dockerfile  pyproject.toml  requirements.txt
labs/mcp-a2a-agents/standalone_notebooks/: agent-a2a-server-standalone.ipynb  agent-mcp-server-standalone.ipynb
labs/realtime-audio/: README.md  clean-up-resources.ipynb  main.bicep  pyproject.toml  realtime-audio.ipynb  requirements.txt
labs/realtime-mcp-agents/: README.MD  main.bicep  mcp_client.py  policy.xml  pyproject.toml  realtime-mcp-agents.ipynb  requirements.txt
labs/realtime-mcp-agents/src/spotify/apim-api/: api.bicep  mcp-openapi.json  openapi.json
labs/realtime-mcp-agents/src/spotify/mcp-server/: mcp-server.py
mock-server/: app.py  mock-server.ipynb  requirements.txt  test.http
modules/: azure-roles.json
notebooks/: multi_agents_eval_with_cloud_run_deployment.ipynb
scripts/: delete-ai-gateway.ps1  git-helpers.md  sync-labs-config.js  test-openai-api.ps1
shared/: apimtools.py  functions.py  utils.py
tests/: test_main.py
tools/: README.MD  apimtools.py  client-oauth.ipynb  openai-client-oauth.ipynb  openai-streaming.ipynb  openai-tests.ipynb  openai-token-rate-limit.ipynb  openai-tracing.ipynb  rate-limit.ipynb  sample-prompts.json  streaming.ipynb  test-ai-gateway.ipynb  test-sequence.ipynb  tracing.ipynb
workshop/: README.md  _clarity.js  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
(+732 files in other folders)
