[project]
name = "realtime-audio-lab"
version = "0.1.0"
description = "Dependencies for the realtime-audio lab notebook."
requires-python = ">=3.12"
dependencies = [
    "aiohttp==3.11.11",
    "openai",
    "openai[realtime]",
    "azure-identity",
    "gradio==6.15.0",
    "gradio_client==1.8.0",
    "fastrtc==0.0.19",
    "uvicorn==0.32.0",
    "tqdm==4.67.1",
    "ffmpy==0.5.0",
    "semantic-kernel[realtime]==1.34.0",
]

[tool.uv]
package = false
