[project]
name = "realtime-mcp-agents-lab"
version = "0.1.0"
description = "Dependencies for the realtime-mcp-agents lab notebook."
requires-python = ">=3.12"
dependencies = [
    "aiohttp==3.11.11",
    "openai",
    "openai[realtime]",
    "fastrtc==0.0.19",
    "fastrtc[vad]==0.0.19",
    "gradio==6.15.1",
    "uvicorn==0.32.0",
    "azure-identity",
    "mcp==1.19.0",
    "semantic-kernel[mcp]==1.34.0",
    "semantic-kernel[realtime]==1.34.0",
]

[tool.uv]
package = false
