[project]
name = "function-calling-lab"
version = "0.1.0"
description = "Dependencies for the function-calling lab (Azure Functions app)."
requires-python = ">=3.12"
# Do not include azure-functions-worker in this file
# The Python Worker is managed by the Azure Functions platform.
dependencies = [
    "azure-functions",
]

[tool.uv]
package = false
