[project]
name = "a2a-sk-mcp-agent"
version = "0.1.0"
description = "A2A Semantic Kernel MCP agent server."
requires-python = ">=3.13"  # a2a-sdk 0.2.3 requires Python 3.13+
dependencies = [
    # MCP Labs
    "mcp==1.9.0",
    "semantic-kernel[mcp]==1.30.0",
    # A2A Labs
    "jwcrypto",
    "a2a-sdk==0.2.3",
    "openai==1.82.0",
    "uvicorn==0.34.2",
    "starlette==0.46.2",
]

[tool.uv]
package = false
