[project]
name = "mcp-sk-servers"
version = "0.1.0"
description = "MCP semantic-kernel servers (mcp-a2a-agents lab)."
requires-python = ">=3.12"
dependencies = [
    # MCP Labs
    "mcp==1.28.1",
    "semantic-kernel==1.34.0",
    "semantic-kernel[mcp]",
    "openai",
    "uvicorn",
]

[tool.uv]
package = false
